API query/create/delete user OIDC identities
